<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_white_24"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_white_24"
        android:title="@string/title_settings" />

</menu>